feat(FormAdapters/GenericUpdatePage): Better Update Pages